# Data-Analysis-with-Pandas-and-Python

./: inter.md  main.py  pyproject.toml
pandas/Incomplete/: 05 - DataFrames II - Filtering Data.ipynb  06 - DataFrames III - Data Extraction.ipynb  08 - MultiIndex.ipynb  09 - The GroupBy Object.ipynb  10 - Merging DataFrames.ipynb
